Loader Animation | Bug fix
* added loading spinner when switching video and added transitions
between states
* bug fix | comments were being re-initialized on video loop and
overlapping

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,7 +4,9 @@
 // endbower
 @import 'reset';
 @import 'mixins';
+@import 'loader';
 @import 'logo';
+
 $base-bg-color: #0d1921;
 $base-font-color: #aec0ca;
 $break-small: 640px;
@@ -174,7 +176,6 @@ button.close {
   left: 0;
   width: 100%;
   height: 100%;
-  // pointer-events: none;
 }
 
 .video-foreground {
@@ -186,8 +187,21 @@ iframe {
   overflow: hidden;
 }
 
+.video-overlay {
+  @include position(absolute, 0 0 0 0);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: $base-bg-color;
+  pointer-events: none;
+  z-index: -1;
+
+  .spinner {
+  }
+}
+
 .comments-overlay {
-  display: none;
+  display: flex;
   align-items: center;
   justify-content: center;
   position: absolute;
@@ -389,4 +403,14 @@ iframe {
       border-bottom-color: rgba($base-font-color, 0.97);
     }
   }
+}
+
+.show {
+  opacity: 1;
+  @include transition(opacity 0.5s $ease-in-out-sine);
+}
+
+.hide {
+  opacity: 0;
+  @include transition(opacity 0.5s $ease-in-out-sine);
 }
